Update Projeto de clusterização com KMeans.ipynb

--- a/Projeto de clusterização com KMeans.ipynb
+++ b/Projeto de clusterização com KMeans.ipynb
@@ -2875,7 +2875,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Colocando o RFM em escala"
+        "## Colocando o RFV em escala"
       ],
       "metadata": {
         "id": "jbgzN3X9o557"
